# gramberry

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  cmds.toml  fly.toml  package.json
public/: manifest.json  styles.css  tailwind.css
src/: lib.rs  routes.rs  templates.rs
src/routes/: twiml.rs
src/twilio-api/: Cargo.toml  README.md
src/twilio-api/docs/: DefaultApi.md
templates/: application.html  call_recordings_index.html  calls_index.html  dashboard.html  index.html  recordings_index.html  sms_index.html  sms_media.html  transcriptions_index.html
templates/twiml/: voicemail.xml
twilio-api/docs/: ApiV2010AccountSipSipIpAccessControlListSipIpAddress.md
twilio-api/src/models/: account_enum_status.rs  api_v2010_account_application.rs  api_v2010_account_authorized_connect_app.rs  api_v2010_account_available_phone_number_country_available_phone_number_machine_to_machine.rs  api_v2010_account_available_phone_number_country_available_phone_number_shared_cost.rs  api_v2010_account_available_phone_number_country_available_phone_number_voip.rs  api_v2010_account_call_call_event.rs  api_v2010_account_call_call_feedback.rs  api_v2010_account_call_call_feedback_summary.rs  api_v2010_account_call_call_notification.rs  api_v2010_account_call_call_notification_instance.rs  api_v2010_account_call_call_recording.rs  api_v2010_account_call_payments.rs  api_v2010_account_call_siprec.rs  api_v2010_account_connect_app.rs  api_v2010_account_incoming_phone_number.rs  api_v2010_account_incoming_phone_number_capabilities.rs  api_v2010_account_incoming_phone_number_incoming_phone_number_assigned_add_on_incoming_phone_number_assigned_add_on_extension.rs  api_v2010_account_incoming_phone_number_incoming_phone_number_local.rs  api_v2010_account_incoming_phone_number_incoming_phone_number_mobile.rs  api_v2010_account_incoming_phone_number_incoming_phone_number_toll_free.rs  api_v2010_account_message.rs  api_v2010_account_message_media.rs  api_v2010_account_message_message_feedback.rs  api_v2010_account_new_key.rs  api_v2010_account_new_signing_key.rs  (+69 more)
(+101 files in other folders)
