[package]
name = "gramberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "*"
axum = "*"
axum-extra = { version = "*", features = ["cookie-private"] }
chrono = "*"

# for sharing a client across twilio API calls. See src/twilio-api for more.
reqwest = { version = "*", features = ["json", "multipart"] }

serde = { version = "*", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "*", features = ["trace"] }
tracing = "*"
twilio-api = { path = "twilio-api" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
